# VEIL

./: .gitignore  Anchor.toml  Arcium.toml  CLAUDE.md  Cargo.toml  PROJECT_STATUS.md  README.md  package-lock.json  package.json  setup.sh  tsconfig.json  tsconfig.sdk.json
app/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/markets/: page.tsx
app/src/app/markets/[id]/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: EncryptionAnimation.tsx  FeatureCard.tsx  Footer.tsx  HowItWorks.tsx  Navigation.tsx  Providers.tsx
app/src/hooks/: index.ts  useVeil.ts
app/src/lib/: veil-types.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/veil/: Cargo.toml
programs/veil/src/: lib.rs
programs/veil/src/arcium/: integration.rs  mod.rs
programs/veil/src/state/: bet.rs  market.rs  mod.rs
sdk/: client.ts  constants.ts  encryption.ts  index.ts  pdas.ts  types.ts
sdk/examples/: basic-usage.ts
tests/: helpers.ts  veil.ts
